@@ -1,4 +1,4 @@
-# Copyright 1992-2013 Free Software Foundation, Inc.
+# Copyright 1992, 1994-2000, 2007-2012 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -53,6 +53,11 @@ proc initialize {} {
     global hex
     global decimal
     global srcfile
+
+    # Disable hardware watchpoints if necessary.
+    if [target_info exists gdb,no_hardware_watchpoints] {
+	gdb_test_no_output "set can-use-hw-watchpoints 0" ""
+    }
 
     if [gdb_test "break marker1" "Breakpoint 1 at $hex: file .*$srcfile, line $decimal.*" "set breakpoint at marker1" ] { 
       return 0; 
@@ -450,8 +455,8 @@ proc test_complex_watchpoint {} {
         gdb_test "break marker6" ".*Breakpoint.*"
         gdb_test "cont" "Continuing.*Breakpoint.*marker6 \\(\\).*" \
             "continue to marker6"
-	gdb_breakpoint [gdb_get_line_number "func2 breakpoint here"]
-	gdb_continue_to_breakpoint "func2 breakpoint here"
+        gdb_test "break func2" ".*Breakpoint.*"
+        gdb_test "cont" "Continuing.*func2.*"
 
         # Test a watch of a single stack-based variable, whose scope
         # is the function we're now in.  This should auto-delete when
@@ -459,29 +464,9 @@ proc test_complex_watchpoint {} {
         #
         gdb_test "watch local_a" ".*\[Ww\]atchpoint \[0-9\]*: local_a" "set local watch"
         gdb_test "cont" "\[Ww\]atchpoint.*local_a.*" "trigger local watch"
+        gdb_test "cont" "Continuing.*\[Ww\]atchpoint .* deleted because the program has left the block in.*which its expression is valid.*" "self-delete local watch"
 
-	set test "self-delete local watch"
-        gdb_test_multiple "cont" $test {
-	    -re "Continuing.*\[Ww\]atchpoint .* deleted because the program has left the block in.*which its expression is valid.*\r\n$gdb_prompt $" {
-		pass $test
-	    }
-	    -re "can't compute CFA for this frame.*\r\n$gdb_prompt $" {
-		global compiler_info no_hw
-
-		# GCC < 4.5.0 does not get LOCATIONS_VALID set by dwarf2read.c.
-		# Therefore epilogue unwinder gets applied which is
-		# incompatible with dwarf2_frame_cfa.
-		verbose -log "compiler_info: $compiler_info"
-		if {$no_hw && ([test_compiler_info {gcc-[0-3]-*}]
-			       || [test_compiler_info {gcc-4-[0-4]-*}])} {
-		    xfail "$test (old GCC has broken watchpoints in epilogues)"
-		    return
-		}
-		fail $test
-	    }
-	}
-
-	gdb_continue_to_breakpoint "func2 breakpoint here"
+        gdb_test "cont" "Continuing.*func2.*"
         # We should be in "func2" again now.  Test a watch of an
         # expression which includes both a stack-based local and
         # something whose scope is larger than this invocation
@@ -501,7 +486,7 @@ proc test_complex_watchpoint {} {
         # across any invocations of "func2", it should not auto-
         # delete.
         #
-	gdb_continue_to_breakpoint "func2 breakpoint here"
+        gdb_test "cont" "Continuing.*func2.*"
         gdb_test "watch static_b" ".*\[Ww\]atchpoint \[0-9\]*: static_b" \
                  "set static local watch"
         gdb_test "cont" "Continuing.*\[Ww\]atchpoint .*: static_b.*" \
@@ -626,8 +611,7 @@ proc test_wide_location_1 {} {
     # Platforms where the target can't watch such a large region
     # should clear hw_expected below.
     if { $no_hw || [target_info exists gdb,no_hardware_watchpoints]
-         || [istarget arm*-*-*]
-         || ([istarget powerpc*-*-*] && ![is_lp64_target])} {
+         || [istarget arm*-*-*] } {
 	set hw_expected 0
     } else {
 	set hw_expected 1
@@ -673,8 +657,7 @@ proc test_wide_location_2 {} {
     # Platforms where the target can't watch such a large region
     # should clear hw_expected below.
     if { $no_hw || [target_info exists gdb,no_hardware_watchpoints]
-         || [istarget arm*-*-*]
-         || [istarget powerpc*-*-*]} {
+         || [istarget arm*-*-*] } {
 	set hw_expected 0
     } else {
 	set hw_expected 1
@@ -886,7 +869,7 @@ proc do_tests {} {
 
     clean_restart $testfile
 
-    if {$no_hw || [target_info exists gdb,no_hardware_watchpoints]} {
+    if {$no_hw} {
 	gdb_test_no_output "set can-use-hw-watchpoints 0" ""
     }
 
@@ -905,7 +888,7 @@ proc do_tests {} {
     # `initialize' anymore.
     clean_restart $testfile
 
-    if {$no_hw || [target_info exists gdb,no_hardware_watchpoints]} {
+    if {$no_hw} {
 	gdb_test_no_output "set can-use-hw-watchpoints 0" ""
     }
 
